Added pillow to requirements

--- a/Manual.html
+++ b/Manual.html
@@ -16,6 +16,9 @@ Version <em>2019.06.18.1620</em><br>
     <tr>
         <td>matplotlib 2+ (and dependencies)</td>
     </tr>
+    <tr>
+        <td>pillow</td>
+    </tr>
 </table>
 <br>
 <em>Note</em>: To install matplotlib and its dependencies on Windows, run the Command Prompt as Administrator and
